# mcp-openai-image-gen

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
src/openai_image_mcp/: client.py  config.example.yaml  config.py  server.py
