[project]
name = "openai-image-mcp"
version = "0.1.0"
description = "MCP server exposing multi-backend image generation (sensenova, modelscope, ...) as separate tools"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "openai-image-mcp contributors" },
]
keywords = ["mcp", "image-generation", "fastmcp", "ai", "sensenova", "modelscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "requests",
    "Pillow",
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
openai-image-mcp = "openai_image_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_image_mcp"]
artifacts = ["src/openai_image_mcp/*.yaml"]
